# newProjectMacJunior

./: .env-example  Makefile  README.md  docker-compose.yaml  docker-compose.yml  hh.py  settings.py
.github/workflows/: linters.yaml
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: .flake8  Makefile  alembic.ini  app_factory.py  main.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  password_handler.py  router.py  security.py
backend_api/app/applications/database/: base_model.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/database/: session_dependenscise.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_02_1837-be9ca5fb20dc_add_users_table.py  2025_06_06_1703-60e10b2ecfad_add_user_verification_and_adnon_fields.py  2025_06_17_1714-3e5db901e4d8_add_product.py
backend_api/app/services/rabbit/: constants.py  rabbitmq_service.py
backend_api/app/services/s3/: s3.py
documentation/: mkdocs.yml
frontend/: Dockerfile  pyproject.toml
frontend/app/: app_factory.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/static/css/: base.css
frontend/app/templates/: index.html  login.html  product_detail.html  register.html
frontend/app/templates/components/: base.html  login_comp.html  navbar.html  products.html
nginx/: nginx.conf
notification_service/: Dockerfile  pyproject.toml
notification_service/app/: main.py
