[project]
name = "newprojectmacjunior"
version = "0.1.0"
description = ""
authors = [
    {name = "urijtrufin",email = "yura@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
