[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "urijtrufin",email = "yura@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
